parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> program
Rule 2     program -> program class
Rule 3     program -> class
Rule 4     class -> field
Rule 5     class -> method
Rule 6     class -> CLASS error
Rule 7     class -> expression
Rule 8     class -> TYPE_IDENTIFIER
Rule 9     class -> block
Rule 10    class -> CLASS new_class_scope class-body
Rule 11    class -> CLASS new_class_scope EXTENDS TYPE_IDENTIFIER class-body
Rule 12    new_class_scope -> TYPE_IDENTIFIER
Rule 13    class-body -> LBRACE class-body-in RBRACE
Rule 14    class-body -> LBRACE class-body-in error
Rule 15    class-body-in -> class-body-in field
Rule 16    class-body-in -> class-body-in method
Rule 17    class-body-in -> <empty>
Rule 18    field -> OBJECT_IDENTIFIER COLON type SEMICOLON
Rule 19    field -> OBJECT_IDENTIFIER COLON type ASSIGN expression SEMICOLON
Rule 20    method -> OBJECT_IDENTIFIER new_variables_scope LPAR formals RPAR COLON type block
Rule 21    new_variables_scope -> <empty>
Rule 22    type -> TYPE_IDENTIFIER
Rule 23    type -> INT32
Rule 24    type -> BOOL
Rule 25    type -> STRING
Rule 26    type -> UNIT
Rule 27    formals -> formal
Rule 28    formals -> formals COMMA formal
Rule 29    formals -> <empty>
Rule 30    formal -> OBJECT_IDENTIFIER COLON type
Rule 31    block -> LBRACE new_variables_scope inblock RBRACE
Rule 32    inblock -> inblock SEMICOLON expression
Rule 33    inblock -> expression
Rule 34    inblock -> <empty>
Rule 35    inblock -> inblock error
Rule 36    expression -> IF expression THEN expression
Rule 37    expression -> IF expression THEN expression ELSE expression
Rule 38    expression -> WHILE expression DO expression
Rule 39    expression -> LET OBJECT_IDENTIFIER COLON type IN expression
Rule 40    expression -> LET OBJECT_IDENTIFIER COLON type ASSIGN expression IN expression
Rule 41    expression -> OBJECT_IDENTIFIER ASSIGN expression
Rule 42    expression -> NOT expression
Rule 43    expression -> MINUS expression
Rule 44    expression -> ISNULL expression
Rule 45    expression -> expression PLUS expression
Rule 46    expression -> expression MINUS expression
Rule 47    expression -> expression TIMES expression
Rule 48    expression -> expression DIV expression
Rule 49    expression -> expression EQUAL expression
Rule 50    expression -> expression LOWER_EQUAL expression
Rule 51    expression -> expression LOWER expression
Rule 52    expression -> expression POW expression
Rule 53    expression -> expression AND expression
Rule 54    expression -> OBJECT_IDENTIFIER LPAR args RPAR
Rule 55    expression -> expression DOT OBJECT_IDENTIFIER LPAR args RPAR
Rule 56    expression -> NEW TYPE_IDENTIFIER
Rule 57    expression -> OBJECT_IDENTIFIER
Rule 58    expression -> SELF
Rule 59    expression -> literal
Rule 60    expression -> LPAR RPAR
Rule 61    expression -> LPAR expression RPAR
Rule 62    expression -> LPAR expression error
Rule 63    expression -> error expression RPAR
Rule 64    expression -> block
Rule 65    expression -> error
Rule 66    expression -> IF expression THEN expression SEMICOLON error
Rule 67    args -> args COMMA expression
Rule 68    args -> expression
Rule 69    args -> <empty>
Rule 70    literal -> INTEGER_LITERAL
Rule 71    literal -> string_literal
Rule 72    literal -> boolean-literal
Rule 73    boolean-literal -> TRUE
Rule 74    boolean-literal -> FALSE

Terminals, with rules where they appear

AND                  : 53
ASSIGN               : 19 40 41
BOOL                 : 24
CLASS                : 6 10 11
COLON                : 18 19 20 30 39 40
COMMA                : 28 67
DIV                  : 48
DO                   : 38
DOT                  : 55
ELSE                 : 37
EQUAL                : 49
EXTENDS              : 11
FALSE                : 74
IF                   : 36 37 66
IN                   : 39 40
INT32                : 23
INTEGER_LITERAL      : 70
ISNULL               : 44
LBRACE               : 13 14 31
LET                  : 39 40
LOWER                : 51
LOWER_EQUAL          : 50
LPAR                 : 20 54 55 60 61 62
MINUS                : 43 46
NEW                  : 56
NOT                  : 42
OBJECT_IDENTIFIER    : 18 19 20 30 39 40 41 54 55 57
PLUS                 : 45
POW                  : 52
RBRACE               : 13 31
RPAR                 : 20 54 55 60 61 63
SELF                 : 58
SEMICOLON            : 18 19 32 66
STRING               : 25
THEN                 : 36 37 66
TIMES                : 47
TRUE                 : 73
TYPE_IDENTIFIER      : 8 11 12 22 56
UNIT                 : 26
WHILE                : 38
error                : 6 14 35 62 63 65 66
string_literal       : 71

Nonterminals, with rules where they appear

args                 : 54 55 67
block                : 9 20 64
boolean-literal      : 72
class                : 2 3
class-body           : 10 11
class-body-in        : 13 14 15 16
expression           : 7 19 32 33 36 36 37 37 37 38 38 39 40 40 41 42 43 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 55 61 62 63 66 66 67 68
field                : 4 15
formal               : 27 28
formals              : 20 28
inblock              : 31 32 35
init                 : 0
literal              : 59
method               : 5 16
new_class_scope      : 10 11
new_variables_scope  : 20 31
program              : 1 2
type                 : 18 19 20 30 39 40

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . program
    (2) program -> . program class
    (3) program -> . class
    (4) class -> . field
    (5) class -> . method
    (6) class -> . CLASS error
    (7) class -> . expression
    (8) class -> . TYPE_IDENTIFIER
    (9) class -> . block
    (10) class -> . CLASS new_class_scope class-body
    (11) class -> . CLASS new_class_scope EXTENDS TYPE_IDENTIFIER class-body
    (18) field -> . OBJECT_IDENTIFIER COLON type SEMICOLON
    (19) field -> . OBJECT_IDENTIFIER COLON type ASSIGN expression SEMICOLON
    (20) method -> . OBJECT_IDENTIFIER new_variables_scope LPAR formals RPAR COLON type block
    (36) expression -> . IF expression THEN expression
    (37) expression -> . IF expression THEN expression ELSE expression
    (38) expression -> . WHILE expression DO expression
    (39) expression -> . LET OBJECT_IDENTIFIER COLON type IN expression
    (40) expression -> . LET OBJECT_IDENTIFIER COLON type ASSIGN expression IN expression
    (41) expression -> . OBJECT_IDENTIFIER ASSIGN expression
    (42) expression -> . NOT expression
    (43) expression -> . MINUS expression
    (44) expression -> . ISNULL expression
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression MINUS expression
    (47) expression -> . expression TIMES expression
    (48) expression -> . expression DIV expression
    (49) expression -> . expression EQUAL expression
    (50) expression -> . expression LOWER_EQUAL expression
    (51) expression -> . expression LOWER expression
    (52) expression -> . expression POW expression
    (53) expression -> . expression AND expression
    (54) expression -> . OBJECT_IDENTIFIER LPAR args RPAR
    (55) expression -> . expression DOT OBJECT_IDENTIFIER LPAR args RPAR
    (56) expression -> . NEW TYPE_IDENTIFIER
    (57) expression -> . OBJECT_IDENTIFIER
    (58) expression -> . SELF
    (59) expression -> . literal
    (60) expression -> . LPAR RPAR
    (61) expression -> . LPAR expression RPAR
    (62) expression -> . LPAR expression error
    (63) expression -> . error expression RPAR
    (64) expression -> . block
    (65) expression -> . error
    (66) expression -> . IF expression THEN expression SEMICOLON error
    (31) block -> . LBRACE new_variables_scope inblock RBRACE
    (70) literal -> . INTEGER_LITERAL
    (71) literal -> . string_literal
    (72) literal -> . boolean-literal
    (73) boolean-literal -> . TRUE
    (74) boolean-literal -> . FALSE

    CLASS           shift and go to state 6
    TYPE_IDENTIFIER shift and go to state 9
    OBJECT_IDENTIFIER shift and go to state 11
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    LET             shift and go to state 15
    NOT             shift and go to state 16
    MINUS           shift and go to state 17
    ISNULL          shift and go to state 18
    NEW             shift and go to state 19
    SELF            shift and go to state 20
    LPAR            shift and go to state 12
    error           shift and go to state 7
    LBRACE          shift and go to state 22
    INTEGER_LITERAL shift and go to state 23
    string_literal  shift and go to state 24
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    init                           shift and go to state 1
    program                        shift and go to state 2
    class                          shift and go to state 3
    field                          shift and go to state 4
    method                         shift and go to state 5
    expression                     shift and go to state 8
    block                          shift and go to state 10
    literal                        shift and go to state 21
    boolean-literal                shift and go to state 25

state 1

    (0) S' -> init .



state 2

    (1) init -> program .
    (2) program -> program . class
    (4) class -> . field
    (5) class -> . method
    (6) class -> . CLASS error
    (7) class -> . expression
    (8) class -> . TYPE_IDENTIFIER
    (9) class -> . block
    (10) class -> . CLASS new_class_scope class-body
    (11) class -> . CLASS new_class_scope EXTENDS TYPE_IDENTIFIER class-body
    (18) field -> . OBJECT_IDENTIFIER COLON type SEMICOLON
    (19) field -> . OBJECT_IDENTIFIER COLON type ASSIGN expression SEMICOLON
    (20) method -> . OBJECT_IDENTIFIER new_variables_scope LPAR formals RPAR COLON type block
    (36) expression -> . IF expression THEN expression
    (37) expression -> . IF expression THEN expression ELSE expression
    (38) expression -> . WHILE expression DO expression
    (39) expression -> . LET OBJECT_IDENTIFIER COLON type IN expression
    (40) expression -> . LET OBJECT_IDENTIFIER COLON type ASSIGN expression IN expression
    (41) expression -> . OBJECT_IDENTIFIER ASSIGN expression
    (42) expression -> . NOT expression
    (43) expression -> . MINUS expression
    (44) expression -> . ISNULL expression
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression MINUS expression
    (47) expression -> . expression TIMES expression
    (48) expression -> . expression DIV expression
    (49) expression -> . expression EQUAL expression
    (50) expression -> . expression LOWER_EQUAL expression
    (51) expression -> . expression LOWER expression
    (52) expression -> . expression POW expression
    (53) expression -> . expression AND expression
    (54) expression -> . OBJECT_IDENTIFIER LPAR args RPAR
    (55) expression -> . expression DOT OBJECT_IDENTIFIER LPAR args RPAR
    (56) expression -> . NEW TYPE_IDENTIFIER
    (57) expression -> . OBJECT_IDENTIFIER
    (58) expression -> . SELF
    (59) expression -> . literal
    (60) expression -> . LPAR RPAR
    (61) expression -> . LPAR expression RPAR
    (62) expression -> . LPAR expression error
    (63) expression -> . error expression RPAR
    (64) expression -> . block
    (65) expression -> . error
    (66) expression -> . IF expression THEN expression SEMICOLON error
    (31) block -> . LBRACE new_variables_scope inblock RBRACE
    (70) literal -> . INTEGER_LITERAL
    (71) literal -> . string_literal
    (72) literal -> . boolean-literal
    (73) boolean-literal -> . TRUE
    (74) boolean-literal -> . FALSE

    $end            reduce using rule 1 (init -> program .)
    CLASS           shift and go to state 6
    TYPE_IDENTIFIER shift and go to state 9
    OBJECT_IDENTIFIER shift and go to state 11
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    LET             shift and go to state 15
    NOT             shift and go to state 16
    MINUS           shift and go to state 17
    ISNULL          shift and go to state 18
    NEW             shift and go to state 19
    SELF            shift and go to state 20
    LPAR            shift and go to state 12
    error           shift and go to state 7
    LBRACE          shift and go to state 22
    INTEGER_LITERAL shift and go to state 23
    string_literal  shift and go to state 24
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    class                          shift and go to state 28
    field                          shift and go to state 4
    method                         shift and go to state 5
    expression                     shift and go to state 8
    block                          shift and go to state 10
    literal                        shift and go to state 21
    boolean-literal                shift and go to state 25

state 3

    (3) program -> class .

    CLASS           reduce using rule 3 (program -> class .)
    TYPE_IDENTIFIER reduce using rule 3 (program -> class .)
    OBJECT_IDENTIFIER reduce using rule 3 (program -> class .)
    IF              reduce using rule 3 (program -> class .)
    WHILE           reduce using rule 3 (program -> class .)
    LET             reduce using rule 3 (program -> class .)
    NOT             reduce using rule 3 (program -> class .)
    MINUS           reduce using rule 3 (program -> class .)
    ISNULL          reduce using rule 3 (program -> class .)
    NEW             reduce using rule 3 (program -> class .)
    SELF            reduce using rule 3 (program -> class .)
    LPAR            reduce using rule 3 (program -> class .)
    error           reduce using rule 3 (program -> class .)
    LBRACE          reduce using rule 3 (program -> class .)
    INTEGER_LITERAL reduce using rule 3 (program -> class .)
    string_literal  reduce using rule 3 (program -> class .)
    TRUE            reduce using rule 3 (program -> class .)
    FALSE           reduce using rule 3 (program -> class .)
    $end            reduce using rule 3 (program -> class .)


state 4

    (4) class -> field .

    CLASS           reduce using rule 4 (class -> field .)
    TYPE_IDENTIFIER reduce using rule 4 (class -> field .)
    OBJECT_IDENTIFIER reduce using rule 4 (class -> field .)
    IF              reduce using rule 4 (class -> field .)
    WHILE           reduce using rule 4 (class -> field .)
    LET             reduce using rule 4 (class -> field .)
    NOT             reduce using rule 4 (class -> field .)
    MINUS           reduce using rule 4 (class -> field .)
    ISNULL          reduce using rule 4 (class -> field .)
    NEW             reduce using rule 4 (class -> field .)
    SELF            reduce using rule 4 (class -> field .)
    LPAR            reduce using rule 4 (class -> field .)
    error           reduce using rule 4 (class -> field .)
    LBRACE          reduce using rule 4 (class -> field .)
    INTEGER_LITERAL reduce using rule 4 (class -> field .)
    string_literal  reduce using rule 4 (class -> field .)
    TRUE            reduce using rule 4 (class -> field .)
    FALSE           reduce using rule 4 (class -> field .)
    $end            reduce using rule 4 (class -> field .)


state 5

    (5) class -> method .

    CLASS           reduce using rule 5 (class -> method .)
    TYPE_IDENTIFIER reduce using rule 5 (class -> method .)
    OBJECT_IDENTIFIER reduce using rule 5 (class -> method .)
    IF              reduce using rule 5 (class -> method .)
    WHILE           reduce using rule 5 (class -> method .)
    LET             reduce using rule 5 (class -> method .)
    NOT             reduce using rule 5 (class -> method .)
    MINUS           reduce using rule 5 (class -> method .)
    ISNULL          reduce using rule 5 (class -> method .)
    NEW             reduce using rule 5 (class -> method .)
    SELF            reduce using rule 5 (class -> method .)
    LPAR            reduce using rule 5 (class -> method .)
    error           reduce using rule 5 (class -> method .)
    LBRACE          reduce using rule 5 (class -> method .)
    INTEGER_LITERAL reduce using rule 5 (class -> method .)
    string_literal  reduce using rule 5 (class -> method .)
    TRUE            reduce using rule 5 (class -> method .)
    FALSE           reduce using rule 5 (class -> method .)
    $end            reduce using rule 5 (class -> method .)


state 6

    (6) class -> CLASS . error
    (10) class -> CLASS . new_class_scope class-body
    (11) class -> CLASS . new_class_scope EXTENDS TYPE_IDENTIFIER class-body
    (12) new_class_scope -> . TYPE_IDENTIFIER

    error           shift and go to state 29
    TYPE_IDENTIFIER shift and go to state 31

    new_class_scope                shift and go to state 30

state 7

    (63) expression -> error . expression RPAR
    (65) expression -> error .
    (36) expression -> . IF expression THEN expression
    (37) expression -> . IF expression THEN expression ELSE expression
    (38) expression -> . WHILE expression DO expression
    (39) expression -> . LET OBJECT_IDENTIFIER COLON type IN expression
    (40) expression -> . LET OBJECT_IDENTIFIER COLON type ASSIGN expression IN expression
    (41) expression -> . OBJECT_IDENTIFIER ASSIGN expression
    (42) expression -> . NOT expression
    (43) expression -> . MINUS expression
    (44) expression -> . ISNULL expression
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression MINUS expression
    (47) expression -> . expression TIMES expression
    (48) expression -> . expression DIV expression
    (49) expression -> . expression EQUAL expression
    (50) expression -> . expression LOWER_EQUAL expression
    (51) expression -> . expression LOWER expression
    (52) expression -> . expression POW expression
    (53) expression -> . expression AND expression
    (54) expression -> . OBJECT_IDENTIFIER LPAR args RPAR
    (55) expression -> . expression DOT OBJECT_IDENTIFIER LPAR args RPAR
    (56) expression -> . NEW TYPE_IDENTIFIER
    (57) expression -> . OBJECT_IDENTIFIER
    (58) expression -> . SELF
    (59) expression -> . literal
    (60) expression -> . LPAR RPAR
    (61) expression -> . LPAR expression RPAR
    (62) expression -> . LPAR expression error
    (63) expression -> . error expression RPAR
    (64) expression -> . block
    (65) expression -> . error
    (66) expression -> . IF expression THEN expression SEMICOLON error
    (70) literal -> . INTEGER_LITERAL
    (71) literal -> . string_literal
    (72) literal -> . boolean-literal
    (31) block -> . LBRACE new_variables_scope inblock RBRACE
    (73) boolean-literal -> . TRUE
    (74) boolean-literal -> . FALSE

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for OBJECT_IDENTIFIER resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for ISNULL resolved as shift
  ! shift/reduce conflict for NEW resolved as shift
  ! shift/reduce conflict for SELF resolved as shift
  ! shift/reduce conflict for LPAR resolved as shift
  ! shift/reduce conflict for error resolved as shift
  ! shift/reduce conflict for INTEGER_LITERAL resolved as shift
  ! shift/reduce conflict for string_literal resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    PLUS            reduce using rule 65 (expression -> error .)
    TIMES           reduce using rule 65 (expression -> error .)
    DIV             reduce using rule 65 (expression -> error .)
    EQUAL           reduce using rule 65 (expression -> error .)
    LOWER_EQUAL     reduce using rule 65 (expression -> error .)
    LOWER           reduce using rule 65 (expression -> error .)
    POW             reduce using rule 65 (expression -> error .)
    AND             reduce using rule 65 (expression -> error .)
    DOT             reduce using rule 65 (expression -> error .)
    CLASS           reduce using rule 65 (expression -> error .)
    TYPE_IDENTIFIER reduce using rule 65 (expression -> error .)
    $end            reduce using rule 65 (expression -> error .)
    RPAR            reduce using rule 65 (expression -> error .)
    THEN            reduce using rule 65 (expression -> error .)
    DO              reduce using rule 65 (expression -> error .)
    COMMA           reduce using rule 65 (expression -> error .)
    RBRACE          reduce using rule 65 (expression -> error .)
    SEMICOLON       reduce using rule 65 (expression -> error .)
    ELSE            reduce using rule 65 (expression -> error .)
    IN              reduce using rule 65 (expression -> error .)
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    LET             shift and go to state 15
    OBJECT_IDENTIFIER shift and go to state 33
    NOT             shift and go to state 16
    MINUS           shift and go to state 17
    ISNULL          shift and go to state 18
    NEW             shift and go to state 19
    SELF            shift and go to state 20
    LPAR            shift and go to state 12
    error           shift and go to state 7
    INTEGER_LITERAL shift and go to state 23
    string_literal  shift and go to state 24
    LBRACE          shift and go to state 22
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

  ! MINUS           [ reduce using rule 65 (expression -> error .) ]
  ! OBJECT_IDENTIFIER [ reduce using rule 65 (expression -> error .) ]
  ! IF              [ reduce using rule 65 (expression -> error .) ]
  ! WHILE           [ reduce using rule 65 (expression -> error .) ]
  ! LET             [ reduce using rule 65 (expression -> error .) ]
  ! NOT             [ reduce using rule 65 (expression -> error .) ]
  ! ISNULL          [ reduce using rule 65 (expression -> error .) ]
  ! NEW             [ reduce using rule 65 (expression -> error .) ]
  ! SELF            [ reduce using rule 65 (expression -> error .) ]
  ! LPAR            [ reduce using rule 65 (expression -> error .) ]
  ! error           [ reduce using rule 65 (expression -> error .) ]
  ! LBRACE          [ reduce using rule 65 (expression -> error .) ]
  ! INTEGER_LITERAL [ reduce using rule 65 (expression -> error .) ]
  ! string_literal  [ reduce using rule 65 (expression -> error .) ]
  ! TRUE            [ reduce using rule 65 (expression -> error .) ]
  ! FALSE           [ reduce using rule 65 (expression -> error .) ]

    expression                     shift and go to state 32
    literal                        shift and go to state 21
    block                          shift and go to state 34
    boolean-literal                shift and go to state 25

state 8

    (7) class -> expression .
    (45) expression -> expression . PLUS expression
    (46) expression -> expression . MINUS expression
    (47) expression -> expression . TIMES expression
    (48) expression -> expression . DIV expression
    (49) expression -> expression . EQUAL expression
    (50) expression -> expression . LOWER_EQUAL expression
    (51) expression -> expression . LOWER expression
    (52) expression -> expression . POW expression
    (53) expression -> expression . AND expression
    (55) expression -> expression . DOT OBJECT_IDENTIFIER LPAR args RPAR
